--- a/test.html
+++ b/test.html
@@ -15,42 +15,56 @@
     </div>
   </section>
   <!-- End API Error Markup -->
+
   <section v-else>
-    <h2>League Leaders Go Here</h2>
+    <h1>NFL League Leaders</h1>
+    <hr />
+
+    <!-- ================= Defensive Template ============================================== -------->
+    <!-- =========== Defensive Markup =============================== -->
+
+    <h3>Top Defensive Players by Tackles,Sack, and Interceptions</h3>
+    <h4>Tackles</h4>
     <div>
       <table class="table table-striped table-sm">
         <thead>
           <tr class="d-flex">
             <th scope="col" class="col-3">Player</th>
-            <th scope="col" class="col-2">Pass Yds</th>
-            <th scope="col" class="col-1">Td's</th>
-            <th scope="col" class="col-1">Pass Attempts</th>
-            <th scope="col" class="col-1">Pass Comp</th>
-            <th scope="col" class="col-1">Int</th>
-            <th scope="col" class="col-1">Rush Yds</th>
-            <th scope="col" class="col-1">Rush TD's</th>
-            <th scope="col" class="col-1">Rating</th>
+            <th scope="col" class="col-2">Pass Catches</th>
+            <th scope="col" class="col-1">Rec Yardage</th>
+            <th scope="col" class="col-1">Rec Avg</th>
+            <th scope="col" class="col-1">Rec TD's</th>
+            <th scope="col" class="col-1">Rec Long</th>
+            <th scope="col" class="col-1">Rec 20+</th>
+            <th scope="col" class="col-1">Rec 40+</th>
+            <th scope="col" class="col-1">Targets</th>
           </tr>
         </thead>
 
         <tbody>
-          <div v-for="(qb, index) in qbLeaders">
+          <div
+            v-for="(tackles, index) tacklesLeaders.cumulativeplayerstats.playerstatsentry"
+          >
             <tr class="d-flex justify-content-around">
               <td class="col-3">
-                {{qb.player.FirstName + " " + qb.player.LastName}}
+                {{tackles.player.FirstName + " " + tackles.player.LastName}}
               </td>
-              <td class="col-2">{{qb.stats.PassYards["#text"]}}</td>
-              <td class="col-1">{{qb.stats.PassTD["#text"]}}</td>
-              <td class="col-1">{{qb.stats.PassAttempts["#text"]}}</td>
-              <td class="col-1">{{qb.stats.PassCompletions["#text"]}}</td>
-              <td class="col-1">{{qb.stats.IntTD["#text"]}}</td>
-              <td class="col-1">{{qb.stats.RushYards["#text"]}}</td>
-              <td class="col-1">{{qb.stats.RushTD["#text"]}}</td>
-              <td class="col-1">Rating here</td>
+              <td class="col-2">{{tackles.stats.TackleTotal["#text"]}}</td>
+              <td class="col-1">{{tackles.stats.TackleSolo["#text"]}}</td>
+              <td class="col-1">{{tackles.stats.TackleAst["#text"]}}</td>
+              <td class="col-1">{{tackles.stats.Sacks["#text"]}}</td>
+              <td class="col-1">{{tackles.stats.Stuffs["#text"]}}</td>
+              <td class="col-1">{{tackles.stats.Forced["#text"]}}</td>
+              <td class="col-1">{{tackles.stats.Int["#text"]}}</td>
+              <td class="col-1">{{tackles.stats.IntTD["#text"]}}</td>
             </tr>
           </div>
         </tbody>
       </table>
     </div>
+    <!-- =========== End Defensive Markup =========================== -->
   </section>
+
+  <!-- ================= End Defensive Template ========================================== -------->
 </div>
+<!-- ======= End .container ======= -->
