--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
                 aria-haspopup="true" aria-expanded="false">
-                NFL League Leaders
+                NFL Leaders
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                 <router-link to="/nfl/offensiveleaders" class="dropdown-item">Offensive Leaders</router-link>
