--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
   <title>Sports's Page</title>
-
+  <!-- Base element needed for nested paths to work with budo --pushstate option -->
+  <base href="/">
   <!-- ====================================================================== -->
   <!-- ============== CSS Files Here ======================================== -->
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" />
@@ -26,33 +27,40 @@
     <!-- ===================================================================== -->
     <div id="app" class="mt-xs-1" v-cloak>
       <!--======================== Navbar Markup ================================ -->
-      <nav class="navbar navbar-expand-sm fixed-top navbar-dark bg-dark justify-content-between">
-        <a class="navbar-brand" href="#">Sport's Scores</a>
+      <nav id="bootstrap-overrides"
+        class="navbar navbar-expand-sm fixed-top navbar-dark bg-dark justify-content-between">
+        <a class="navbar-brand" href="#">Sport's Source</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
           aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
+            <li class="nav-item">
               <router-link to="/" class="nav-link">Home <span class="sr-only">(current)</span></router-link>
             </li>
 
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
                 aria-haspopup="true" aria-expanded="false">
-                NFL Leaders
+                NFL Stats Leaders
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                 <router-link to="/nfl/offensiveleaders" class="dropdown-item">Offensive Leaders</router-link>
                 <router-link to="/nfl/defensiveleaders" class="dropdown-item">Defensive Leaders</router-link>
               </div>
             </li>
-            
+
             <li class="nav-item">
-              <router-link to="/mlbleagueleaders" class="nav-link">MLB Leaders <span class="sr-only">(current)</span></router-link>
+              <router-link to="/mlbleagueleaders" class="nav-link">MLB Stats Leaders <span
+                  class="sr-only">(current)</span></router-link>
             </li>
-            
+
+            <li class="nav-item">
+              <router-link to="/nbaleagueleaders" class="nav-link">NBA Stats Leaders <span
+                  class="sr-only">(current)</span></router-link>
+            </li>
+
           </ul>
         </div>
       </nav>
